plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.sonarqube" version "7.0.1.6134"
    id 'jacoco'
}

group = 'dev.syntax'
version = '0.0.1-SNAPSHOT'
description = 'teenyfinny_channel'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// SonarQube task가 Jacoco 리포트 이후 실행되도록 의존성 설정
tasks.named('sonarqube') {
    dependsOn tasks.named('jacocoTestReport')
}

sonarqube {
    properties {
        property "sonar.projectKey", "channel"
        property "sonar.projectName", "channel"

        // main과 test를 분리
        property "sonar.sources", "src/main/java"
        property "sonar.tests",   "src/test/java"

        // 리소스/빌드 폴더 정리
        property "sonar.exclusions", "**/build/**"
        property "sonar.java.binaries", "build/classes/java/main"

        // 커버리지 리포트 지정
        property "sonar.java.coveragePlugin", "jacoco"

        // Windows에서도 문제 없는 슬래시 사용, 절대경로
        property "sonar.coverage.jacoco.xmlReportPaths",
                "/build/reports/jacoco/test/jacocoTestReport.xml"
    }
}

jacoco {
    toolVersion = '0.8.11'
}

jacocoTestReport {
    dependsOn tasks.named('test') // 테스트 후 보고서 생성
    reports {
        xml.required.set(true)
        csv.required.set(false)
        html.required.set(true)
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit { minimum = 0.30 }
        }
        rule {
            enabled = true
            element = 'CLASS'
            limit { counter = 'BRANCH'; value = 'COVEREDRATIO'; minimum = 0.50 }
            limit { counter = 'LINE'; value = 'COVEREDRATIO'; minimum = 0.50 }
            limit { counter = 'LINE'; value = 'TOTALCOUNT'; maximum = 300 }
            excludes = ['*.test.*']
        }
    }
}
